--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body {
-  background-color:"BlanchedAlmond"
+  background-color: "BlanchedAlmond";
 }
 h1 {
-  color:"DarkBlue"
-  align:centered
+  color: "DarkBlue";
+  align: "centered";
 }
 p {
-  color:"DarkBlue"
-  align:centered
+  color:"DarkBlue";
+  align: "centered";
 }
