--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,16 @@ h1 {
   text-align: center;
 }
 
+h3 {
+  color: DarkBlue;
+  text-align: center;
+}
+
+h5 {
+  color: DarkBlue;
+  text-align: center;
+}
+
 p {
   color: DarkBlue;
   text-align: center;
