--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,24 @@
 body {
-  background-color: BlanchedAlmond;
+  background-color: DarkSalmon;
 }
 
 h1 {
-  color: DarkBlue;
+  color: MidnightBlue;
   text-align: center;
 }
 
 h3 {
-  color: DarkBlue;
+  color: MidnightBlue;
   text-align: center;
 }
 
 h5 {
-  color: DarkBlue;
+  color: MidnightBlue;
   text-align: center;
 }
 
 p {
-  color: DarkBlue;
+  color: MidnightBlue;
   text-align: center;
 }
 
