--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,24 @@
 body {
-  background-color: DarkSalmon;
+  background-color: #2B998C;
 }
 
 h1 {
-  color: MidnightBlue;
+  color: #221D2B;
   text-align: center;
 }
 
 h3 {
-  color: MidnightBlue;
+  color: #221D2B;
   text-align: center;
 }
 
 h5 {
-  color: MidnightBlue;
+  color: #221D2B;
   text-align: center;
 }
 
 p {
-  color: MidnightBlue;
+  color: #221D2B;
   text-align: center;
 }
 
