--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
             align-items: center;
         }
         .logo-image {
-            height: 90px; /* Increased height */
+            height: 90px;
             width: auto;
             margin-right: 10px;
         }
