--- a/templates/rapid_review.html
+++ b/templates/rapid_review.html
@@ -66,7 +66,7 @@
     <form action="{{ url_for('rapid_review', set_id=study_set.id) }}" method="post">
         <div class="form-group">
             <label for="length">Number of cards:</label>
-            <input type="number" id="length" name="length" min="1" max="{{ study_set.cards|length }}" required>
+            <input type="number" id="length" name="length" min="1" max="{{ cards|length }}" required>
         </div>
         <p class="note">It may be difficult for our
         algorithm to reform a Jampack to focus more on big picture ideas, while simultaneously
