--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,4 +49,6 @@
     <a href="{{ url_for('create_jampack') }}" class="btn">Create New Jampack</a>
     <a href="{{ url_for('jampack_generator') }}" class="btn" style="margin-left: 10px;">Jampack Generator</a>
 </div>
+<hr>
+<p>For support with technical difficulties, please <a href="mailto:craftsa@bc.edu">email us</a>.</p>
 {% endblock %}
