--- a/templates/study_set.html
+++ b/templates/study_set.html
@@ -133,6 +133,8 @@
     <button id="previous-button" class="btn"> < </button>
     <button id="next-button" class="btn"> > </button>
 </div>
+<br>
+<p>For fast navigation, use the up arrow key to flip the current card, and the left and right arrow keys to switch cards.</p>
 <div class="actions" style="margin-top: 30px;">
     <div class="left-actions">
         <a href="{{ url_for('add_card', set_id=study_set.id) }}" class="btn">Add Card(s)</a>
