--- a/templates/jampack_generator.html
+++ b/templates/jampack_generator.html
@@ -62,18 +62,19 @@
         </div>
         <div class="form-group">
             <label for="text">Text:</label>
-            <textarea id="text" name="text" rows="10" required maxlength="10000" placeholder="&quot;I have a quiz on this reading tomorrow. Make some flashcards to help me study...&quot;
+            <textarea id="text" name="text" rows="10" required maxlength="20000" placeholder="&quot;I have a quiz on this reading tomorrow. Make some flashcards to help me study...&quot;
 
 &quot;Here's a list of Spanish vocabulary. Make me a Jampack...&quot;
 
 &quot;Make me a study set about current events...&quot;
 
 &quot;Help me prepare for my job interview at...&quot;"></textarea>
-            <p id="char-count">0 / 10,000 characters</p>
+            <p id="char-count">0 / 20,000 characters</p>
         </div>
         <div class="form-group">
-            <label for="num_cards">Estimated number of cards (max = 50):</label>
-            <input type="number" id="num_cards" name="num_cards" min="1" max="50" value="20" required>
+            <label for="num_cards">Estimated number of cards (optional, max = 50):</label>
+            <input type="number" id="num_cards" name="num_cards" min="1" max="50">
+            <p>Leave blank to default to the recommended number of cards.</p>
         </div>
         <button type="submit" class="submit-btn">Generate Jampack</button>
     </form>
@@ -97,8 +98,8 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 
     textArea.addEventListener('input', function() {
-        var remainingChars = 10000 - this.value.length;
-        charCount.textContent = this.value.length + ' / 10,000 characters';
+        var remainingChars = 20000 - this.value.length;
+        charCount.textContent = this.value.length + ' / 20,000 characters';
         if (remainingChars < 0) {
             charCount.style.color = 'red';
         } else {
@@ -107,9 +108,9 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 
     form.addEventListener('submit', function(e) {
-        if (textArea.value.length > 10000) {
+        if (textArea.value.length > 20000) {
             e.preventDefault();
-            alert('Text must be 10,000 characters or less.');
+            alert('Text must be 20,000 characters or less.');
         } else {
             loadingMessage.style.display = 'block';
             form.style.display = 'none';
