--- a/templates/rapid_review.html
+++ b/templates/rapid_review.html
@@ -68,10 +68,8 @@
             <label for="length">Number of cards:</label>
             <input type="number" id="length" name="length" min="1" max="{{ cards|length }}" required>
         </div>
-        <p class="note">It may be difficult for our
-        algorithm to reform a Jampack to focus more on big picture ideas, while simultaneously
-        meeting the exact requests for number of cards.</p>
-        <p class="note">For this reason, the length of Rapid Review Jampacks may stray further from your desires than usual.</p>
+        <p class="note">Rapid Review takes a Jampack and condenses it into fewer cards to focus on "big picture" ideas. Got an exam in ten minutes? Use this.</p>
+        <p class="note">"Number of cards" is just an estimate, since Rapid Review might have to add or subtract a few to capture the main ideas of an existing Jampack.</p>
         <button type="submit" class="submit-btn">Create Rapid Review</button>
     </form>
     <div id="loading-message" style="display: none;">
