--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,8 @@
     <br><hr><br>
     <section class="about-section">
         <h2>About Jamliterate</h2>
-        <p>Jamliterate offers a simplified learning experience for students, using the power of AI to automate the creation and modification of flashcards. Our platform empowers students of all ages to learn more efficiently.</p>
+        <p>Jamliterate offers an enhanced educational experience for students of all ages. We use AI technology to generate and modify study flashcards based on any text. Some online tools get you halfway there, 
+            automating some, but not all, of the tedious steps involved in making well-grounded flashcards. Jamliterate does all the work for you, with just the click of a button.</p>
     </section>
     <section class="contact-section">
         <h3>Contact Us</h3>
