--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
     </section>
     <section class="contact-section">
         <h3>Cancelation Policy</h3>
-        <p><strong>Email:</strong>Premium users may cancel their subscription at any time, and will not be billed further. Please note that cancelations go into effect immediately.</p>
+        <p>Premium users may cancel their subscription at any time, and will not be billed further. Please note that cancelations go into effect immediately.</p>
     </section>
     <section class="contact-section">
         <h3>Contact Us</h3>
