--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <div class="homepage-container">
     <header class="header-section">
         <h1>Welcome to Jamliterate!</h1>
-        <p class="subtitle">Accelerate your learning with our personalized study tools.</p>
+        <p class="subtitle">Accelerate your learning with our enhanced study tools.</p>
         <a href="{{ url_for('login') }}" class="google-btn">
             <span class="google-icon">
                 <svg viewBox="0 0 24 24" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
