--- a/templates/home.html
+++ b/templates/home.html
@@ -31,15 +31,11 @@
     </section>
     <section class="contact-section">
         <h3>Refund Policy</h3>
-        <p><strong>Jamliterate Premium Subscription:</strong> Jamliterate Premium enrollment is non-refundable, however, premium users may opt out of their subscription during their 7-day free trial and will not be billed.</p>
+        <p><strong>Jamliterate Premium Subscription:</strong> Jamliterate Premium enrollment is non-refundable, however, premium users who opt out of their subscription before the end of their 7-day free trial will not be billed.</p>
     </section>
     <section class="contact-section">
         <h3>Cancelation Policy</h3>
         <p>Premium users may cancel their subscription at any time, and will not be billed further. Please note that cancelations go into effect immediately.</p>
-    </section>
-    <section class="contact-section">
-        <h3>Contact Us</h3>
-        <p><strong>Email:</strong> <a href="mailto:info@jamliterate.com">info@jamliterate.com</a></p>
     </section>
 </div>
 {% endblock %}
